# stats-helper

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: examples.ipynb  hypothesis.ipynb
src/statshelper/: BaseStatistics.py  __init__.py
src/statshelper/tools/: validators.py
tests/: test_hypothesis_test.py  test_statistics_info.py
