[tool.poetry]
name = "stats-helper"
version = "0.1.0"
description = ""
authors = ["Thiago Soares <soaresthiagdp@gmail.com>"]
packages = [
    { include = "statshelper", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
scipy = "^1.15.3"
ipykernel = "^6.29.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"